# microEcommerce

./: .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 7844a74f29c6_add_commande_table.py  8206759c4913_add_client_table_to_the_database.py  a73a456f4122_creation_de_la_table_product1.py  a831f8f136af_creation_de_la_table_product.py  bc9a3bdc4e71_add_client_table_to_the_database2.py
src/config/: bdd_config.py
src/endpoints/: client_endpoint.py  commande_endpoint.py  product_endpoint.py
src/models/: __init__.py  client_model.py  commande_model.py  product_model.py
src/repositories/: client_repository.py  commande_repository.py  productrepository.py
src/schemas/: client_schema.py  commande_schema.py  product_schema.py
src/services/: client_service.py  commande_service.py  product_service.py
