[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = ["ahmed <ahmed.dahdouh98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.14.0"
psycopg2 = "^2.9.10"
pydantic = {extras = ["email"], version = "^2.9.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
